--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -1116,7 +1116,7 @@ html.no-clip-path #other_players, html.no-clip-path #other_profiles{
     text-align: center;
     text-transform: uppercase;
     font-weight: 600;
-    background-color: #951354;
+    background-color: var(--darkermaincolor);
     text-shadow: 0px 0px 7px rgba(0,0,0,0.3);
 }
 
