--- a/includes/resources.ejs
+++ b/includes/resources.ejs
@@ -9,6 +9,9 @@
 <script src="https://unpkg.com/tippy.js@5"></script>
 <script src="/resources/js/sticky.min.js"></script>
 <script src="/resources/js/anime.min.js"></script>
+<script>
+    let extra = <%- JSON.stringify(extra) %>;
+</script>
 <% if(page == 'stats'){ %>
-    <script src="/resources/js/stats.js?v25"></script>
+    <script src="/resources/js/stats.js?v26"></script>
 <% } %>
