--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,8 @@
         <div id="enter_player_box_wrapper">
             <div id="enter_player_box">
                 <p>Show SkyBlock stats for</p>
-                <input <% if(player){ %> value="<%= player %>" <% }%> id="inp_enter_username" type="text" placeholder="Enter username">
-                <a href="<% if(player){ %>/stats/<%= player %><% }%>" id="goto_target_username">Show me</a>
+                <input <% if(player){ %> value="<%= player %>" <% }%> id="inp_enter_username" type="text" placeholder="Enter animal">
+                <a href="<% if(player){ %>/stats/<%= player %><% }%>" id="goto_target_username">Show moo</a>
             </div>
         </div>
         <div id="error_box_wrapper" <% if(error){ %>class="show-error"<% } %>>
@@ -43,8 +43,8 @@
         <div id="top_profiles_box_wrapper">
             <% for(const [index, profile] of extra.top_profiles.entries()){ %>
                 <a href="/stats/<%= profile.uuid %>/<%= profile.profile_id %>" class="top-profile">
-                    <img src="https://minotar.net/helm/<%= profile.uuid %>/128" class="profile-avatar">
-                    <div class="profile-name"><%= profile.username %></div><br>
+                    <img src="/resources/img/zoo/face/<%= profile.uuid.charAt(0) %>.png" class="profile-avatar">
+                    <div class="profile-name"><%= extra.zoo[profile.uuid.charAt(0)] %></div><br>
                     <div class="profile-views">Views: <%= helper.formatNumber(profile.total) %></div>
                     <div class="profile-rank">#<%= index + 1 %></div>
                 </a>
@@ -91,8 +91,8 @@
                             let profileViews = document.createElement('div');
                             let profileRank = document.createElement('div');
 
-                            profileAvatar.src = 'https://minotar.net/helm/' + profile.uuid + '/128';
-                            profileName.innerHTML = profile.username;
+                            profileAvatar.src = '/resources/img/zoo/face/' + profile.uuid.charAt(0) + '.png';
+                            profileName.innerHTML = extra.zoo[profile.uuid.charAt(0)];
                             profileViews.innerHTML = 'Views: ' + formatNumber(profile.total);
                             profileRank.innerHTML = '#' + (currentOffset + index + 1);
 
