--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -858,13 +858,13 @@ twitterDescription += '. Click to view more stats!'
 <html>
 <head>
     <%- include('../includes/resources') %>
-    <title><%- constants.zoo[calculated.uuid.charAt(0)] %> | SkyBlock Zoo</title>
+    <title><%- constants.zoo[calculated.animal] %> | SkyBlock Zoo</title>
     <link rel="shortcut icon" href="/resources/img/zoo/face/<%- calculated.animal %>.png" type="image/png">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="<%- constants.zoo[calculated.uuid.charAt(0)] %>">
-    <meta property="og:title" content="<%- constants.zoo[calculated.uuid.charAt(0)] %> | SkyBlock Zoo">
-    <meta property="og:image" content="https://visage.surgeplay.com/face/256/<%- calculated.uuid %>">
-    <meta property="twitter:image" content="https://visage.surgeplay.com/face/256/<%- calculated.uuid %>">
+    <meta property="og:title" content="<%- constants.zoo[calculated.animal] %>">
+    <meta property="og:title" content="<%- constants.zoo[calculated.animal] %> | SkyBlock Zoo">
+    <meta property="og:image" content="/resources/img/zoo/face/<%- calculated.animal %>.png">
+    <meta property="twitter:image" content="/resources/img/zoo/face/<%- calculated.animal %>.png">
     <meta property="og:description" content="<%= description %>">
     <meta property="twitter:description" content="<%= twitterDescription %>">
 </head>
