Add description tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <meta property="og:image" content="/resources/img/logo_square.png">
     <meta property="og:title" content="SkyBlock Stats">
     <meta property="og:description" content="A beautiful site for sharing your SkyBlock profile 🌹">
+    <meta property="description" content="A beautiful site for sharing your SkyBlock profile 🌹">
     <style>
     @media (max-width: 480px){
         header{
