--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/resources/img/logo_square.png" type="image/png">
     <meta charset="utf-8">
     <meta property="og:image" content="/resources/img/logo_square.png">
-    <meta property="og:title" content="SkyBlock Stats">
+    <meta property="og:title" content="SkyBlock Zoo">
     <meta property="og:description" content="A beautiful site for sharing your SkyBlock profile 🌹">
     <meta property="description" content="A beautiful site for sharing your SkyBlock profile 🌹">
     <style>
