--- a/includes/header.ejs
+++ b/includes/header.ejs
@@ -20,7 +20,7 @@
 <div id="info_box">
     <div onclick="toggleInfo()" id="info_close"></div>
     <div id="info_box_content">
-        <p>This open-source project was created by <a class="link link-twitter" href="https://twitter.com/LeaPhant" target="_blank">LeaPhant</a> and is still under development. You can report bugs or contribute to the code on <a class="link link-github" href="https://github.com/LeaPhant/skyblock-stats" target="_blank">GitHub</a>.</p>
+        <p>This open-source project was created by <a class="link link-twitter" href="https://twitter.com/LeaPhant" target="_blank">LeaPhant</a> and is no longer in development.<br>You can find the code on <a class="link link-github" href="https://github.com/LeaPhant/skyblock-stats" target="_blank">GitHub</a> and use any parts of it (or all of it) to create similar projects and sites!</p>
         <p>Chat: <a class="link link-discord" href="https://discord.gg/R9knhVc">discord.gg/R9knhVc</a></p>
         <p>If you want to support my work, you can do that via <a class="link link-patreon" href="https://www.patreon.com/LeaPhant" target="_blank">Patreon</a> (monthly), <a class="link link-kofi" href="https://www.ko-fi.com/leaphant" target="_blank">Ko-fi</a> (one-time) or <a class="link link-paypal" href="https://paypal.me/leaphant" target="_blank">PayPal</a> (one-time). It would mean a lot to me!</p>
         <p>Big thanks to my all-time $5 patrons :)</p>
