Make render-blocking resources load asynchronously

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,6 +76,7 @@
             <% } %>
         </div>
         <% } %>
+        <%- include('../includes/footer'); %>
         <script src="/resources/js/js.cookie.min.js"></script>
         <script>
             let targetUsername = document.getElementById("inp_enter_username");
