--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -2110,6 +2110,7 @@ twitterDescription += '. Click to view more stats!'
         <% } %>
         </div>
     </div>
+    <%- include('../includes/footer'); %>
     <script>
         let items = <%- JSON.stringify(items) %>;
         let calculated = <%- JSON.stringify(calculated) %>;
