--- a/includes/resources.ejs
+++ b/includes/resources.ejs
@@ -3,15 +3,22 @@
     <meta property="og:site_name" content="sky.lea.moe">
     <meta property="og:type" content="object">
     <link rel="sitemap" href="/sitemap.xml">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap" rel="stylesheet">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap"></noscript>
     <link rel="stylesheet" href="/resources/css/index.css?v119">
-    <link rel="stylesheet" href="/resources/css/inventory.css?v13">
-    <script src="https://unpkg.com/popper.js@1"></script>
-    <script src="https://unpkg.com/tippy.js@5"></script>
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="/resources/js/sticky.min.js"></script>
-    <script src="/resources/js/anime.min.js"></script>
-    <script src="/resources/js/skinview3d.bundle.js"></script>
+    <noscript><link rel="stylesheet" href="/resources/css/inventory.css?v13"></noscript>
+    <script>
+        const stylesheets = [
+            "/resources/css/inventory.css?v13",
+            "https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap"
+        ];
+
+        stylesheets.forEach(function(sheet){
+            const link = document.createElement('link')
+            link.href = sheet;
+            link.rel = 'stylesheet'
+            document.head.appendChild(link);
+        });
+    </script>
     <script>
         let extra = <%- JSON.stringify(extra) %>;
 
@@ -62,6 +69,3 @@
             searchUser.addEventListener('change', updateUserTarget);
         });
     </script>
-    <% if(page == 'stats'){ %>
-        <script src="/resources/js/stats.js?v57"></script>
-    <% } %>
