--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1595,6 +1595,11 @@ twitterDescription += '. Click to view more stats!'
     <script>
         let items = <%- JSON.stringify(items) %>;
         let calculated = <%- JSON.stringify(calculated) %>;
+        
+        const constants = { 
+            minecraft_formatting: <%- JSON.stringify(constants.minecraft_formatting) %>, 
+            special_enchants: <%- JSON.stringify(constants.special_enchants) %> 
+        };
     </script>
 </body>
 </html>
