--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
                 let playerName = targetUsername.value;
 
                 if(playerName){
-                    playerName = playerName.replace(/[^a-z\d\-\_:]/g, '');
+                    playerName = playerName.replace(/[^a-zA-Z\d\-\_:]/g, '');
                     inputSearchUser.value = playerName;
                 }
 
