--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -592,7 +592,9 @@ twitterDescription += '. Click to view more stats!'
                     <% } %>
                     <div class="additional-stat"><span data-tippy-content="Last updated on <%= moment(calculated.last_updated.unix).format('D MMMM YYYY HH:mm') %>"><span class="stat-name">Last Updated: </span><span class="stat-value"><%= calculated.last_updated.text %></span></span></div>
                     <div class="additional-stat"><span data-tippy-content="Joined on <%= moment(calculated.first_join.unix).format('D MMMM YYYY HH:mm') %>"><span class="stat-name">Joined: </span><span class="stat-value"><%= calculated.first_join.text %></span></span></div>
-                    <div class="additional-stat"><span class="stat-name">Purse: </span><span class="stat-value"><%= helper.formatNumber(calculated.purse, true) %> Coin<%= Math.floor(calculated.purse) == 1 ? '': 's' %></span></div>
+                    <div data-tippy-content="<span class='stat-name'>Purse Balance: </span><span class='stat-value'><%= Math.round(calculated.purse).toLocaleString() %> Coins</span><br><br>
+                        <span class='stat-name'>Booster Cookie Sell Price: </span><span class='stat-value'><%= Math.round(extra.cookie.sellPrice).toLocaleString() %> Coins</span>
+                        <span class='stat-name'>Booster Cookie USD Price: </span><span class='stat-value'>$2.75</span>" class="additional-stat"><span class="stat-name">Purse: </span><span class="stat-value">$<%= (calculated.purse / extra.cookie.sellPrice * 2.75).toFixed(2) %></span></div>
                     <% if('bank' in calculated){ %>
                         <div data-tippy-content="<span class='stat-name'>Bank Balance: </span><span class='stat-value'><%= Math.round(calculated.bank).toLocaleString() %> Coins</span><br><br>
                         <span class='stat-name'>Booster Cookie Sell Price: </span><span class='stat-value'><%= Math.round(extra.cookie.sellPrice).toLocaleString() %> Coins</span>
