--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
     .skycrypt-banner{
         position: relative;
         display: inline-block;
-        background: url(resources/img/bg_blur.webp?v2) no-repeat center center fixed;
+        background: url(/resources/img/bg_blur.webp?v2) no-repeat center center fixed;
         background-size: cover;
         width: 100%;
         margin-bottom: 20px;
