Use SSAA for skin renderer

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -575,7 +575,7 @@ html.no-webp #bg_blur{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.5);
     cursor: pointer;
 }
 
