--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
                 %>
                 <a href="/stats/<%= profile.uuid %>" class="top-profile">
                     <img src="https://crafatar.com/avatars/<%= profile.uuid %>?size=128&overlay" class="profile-avatar">
-                    <div class="profile-name"><%= profile.userInfo.username %><% if('emoji' in profile.userInfo){ %><%- extra.twemoji.parse(profile.userInfo.emoji) %><% } %></div><br>
+                    <div class="profile-name"><%= profile.userInfo.username %><% if('emojiImg' in profile.userInfo){ %><img class="emoji" draggable="false" src="<%= profile.userInfo.emojiImg %>"><% }else if('emoji' in profile.userInfo){ %><%- extra.twemoji.parse(profile.userInfo.emoji) %><% } %></div><br>
                     <div class="profile-last-online"><%- lastUpdatedText %></div>
                     <% /*
 
