--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
         <div id="enter_player_box_wrapper">
             <div id="enter_player_box">
                 <p>Show SkyBlock stats for</p>
-                <input <% if(player){ %> value="<%= player %>" <% }%> id="inp_enter_username" type="text" placeholder="Enter username">
+                <input <% if(player){ %> value="<%= player %>" <% }%> id="inp_enter_username" type="search" placeholder="Enter username" name="ign" enterkeyhint="go" aria-label="username">
                 <a href="<% if(player){ %>/stats/<%= player %><% }else{ %>#<% } %>" id="goto_target_username">Show me</a>
                 <!--<p>or take me to a <a href="/random/stats">random profile</a>.</p>-->
             </div>
