--- a/includes/footer.ejs
+++ b/includes/footer.ejs
@@ -1,5 +1,5 @@
-<script src="https://unpkg.com/popper.js@1"></script>
-<script src="https://unpkg.com/tippy.js@5"></script>
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
 <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 <script src="/resources/js/sticky.min.js"></script>
 <script src="/resources/js/anime.min.js"></script>
@@ -33,8 +33,6 @@
     if(!Modernizr.testAllProps('transform', 'translateY(10px)'))
         document.documentElement.classList.add('no-transform');
 
-    tippy('*[data-tippy-content]');
-
     const prideFlag = document.querySelector('.pride-flag');
     const prideFlags = ["rainbow", "trans", "lesbian", "bi", "pan", "nb", "ace", "genderfluid", "logo"];
 
@@ -56,5 +54,5 @@
     });
 </script>
 <% if(page == 'stats'){ %>
-    <script src="/resources/js/stats.js?v63"></script>
+    <script src="/resources/js/stats.js?v64"></script>
 <% } %>
